fixed black pawn double jump

--- a/Chess/style.css
+++ b/Chess/style.css
@@ -37,7 +37,7 @@ color:black;
     width: 300px;
     height: 160px;
     padding:10px;
-    font-size: 20px;
+    font-size:30px;
 }
 #chessBoard{
     /* width:1500px; */
